--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@
 *.jar
 *.war
 *.ear
+
+webapps
+.project
+conf
+build
+.classpath
+bin
+.checkstyle
+.pmd
+.settings
+tmp
+junit*
+solr
+contexts
+resources
+logs/*
+work/*
