apply Solr 4.4 settings.

--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,19 @@
 *.war
 *.ear
 
-webapps/anuenue.war
+/webapps/anuenue.war
 .project
-conf
-build
+/conf
+/build
 .classpath
-bin
+/bin
 .checkstyle
 .pmd
 .settings
 tmp
 junit*
-solr
-contexts
-resources
-logs/*
-work/*
+/solr
+/contexts
+/resources
+/logs/*
+/work/*
